LynithDev.rust-plugin-loader.06c3fb4abeb9310abf29711dfb7e2cf8c6e23f1b
warning: /tmp/LynithDev_rust-plugin-loader_q38cnsal/Cargo.toml: unused manifest key: workspace.package.name
   Compiling proc-macro2 v1.0.94
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.171
   Compiling zerocopy v0.8.24
   Compiling semver v1.0.26
   Compiling cfg-if v1.0.0
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.15.2
   Compiling winnow v0.7.4
   Compiling syn v1.0.109
   Compiling autocfg v1.4.0
   Compiling serde v1.0.219
   Compiling toml_datetime v0.6.8
   Compiling lock_api v0.4.12
   Compiling rustc_version v0.4.1
   Compiling rustversion v1.0.20
   Compiling quote v1.0.40
   Compiling paste v1.0.15
   Compiling parking_lot_core v0.9.10
   Compiling indexmap v2.9.0
   Compiling getrandom v0.2.15
   Compiling stabby-macros v36.2.2
   Compiling stabby-abi v36.2.2
    Checking scopeguard v1.2.0
    Checking smallvec v1.15.0
   Compiling syn v2.0.100
   Compiling rand_core v0.6.4
   Compiling stabby v36.2.2
    Checking sha2-const-stable v0.1.0
   Compiling serde_json v1.0.140
    Checking parking_lot v0.12.3
    Checking socket2 v0.5.9
    Checking signal-hook-registry v1.4.2
    Checking mio v1.0.3
    Checking libloading v0.8.6
    Checking memchr v2.7.4
    Checking bytes v1.10.1
    Checking pin-project-lite v0.2.16
    Checking ryu v1.0.20
    Checking itoa v1.0.15
   Compiling ppv-lite86 v0.2.21
   Compiling rand_chacha v0.3.1
   Compiling rand v0.8.5
   Compiling toml_edit v0.22.24
    Checking plugin_macros v0.1.0 (/tmp/LynithDev_rust-plugin-loader_q38cnsal/crates/macros)
   Compiling serde_derive v1.0.219
   Compiling tokio-macros v2.5.0
    Checking tokio v1.44.2
   Compiling proc-macro-crate v3.3.0
error[E0658]: use of unstable library feature `freeze`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/stabby-abi-36.2.2/src/vtable/mod.rs:21:54
   |
21 | pub trait IConstConstructor<'a, Source>: 'a + Copy + core::marker::Freeze {
   |                                                      ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #121675 <https://github.com/rust-lang/rust/issues/121675> for more information
   = help: add `#![feature(freeze)]` to the crate attributes to enable

For more information about this error, try `rustc --explain E0658`.
error: could not compile `stabby-abi` (lib) due to 1 previous error
